--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,7 @@
+/* TO DO 
+_credits for gem font-awesome image
+*/
+
 /* $var
 var: $primary-light-color: white, $primary-dark-color:grey, $secondary-light-color§:lightwatergreen, $secondary-dark-color:weatergreen
 var: $background-light-color, $background-dark-primary-color, $background-dark-secondary-color 
@@ -14,7 +18,7 @@ content{max-w:, mg: auto} // one each section
 // text and buttons
 $primary-light-color: white; 
 $primary-dark-color: #C0C3D1; // #69696D; 
-$secondary-light-color: #719a9c; 
+$secondary-light-color: #DAECED; // #719a9c; 
 $secondary-dark-color: #028484;
 $complementary-secondary-dark-color: #FFFFFF;
 
@@ -22,6 +26,8 @@ $complementary-secondary-dark-color: #FFFFFF;
 $background-light-color: white; 
 $background-dark-primary-color: #121117; 
 $background-dark-secondary-color: #191C1E; // !! secondo me è #19191F
+
+$space-between-section-elements: 10px;
 
 // others
 $horizontal-nav-li-distance: 30px;
@@ -39,6 +45,18 @@ $horizontal-nav-li-distance: 30px;
     align-items: center;
 }
 
+@mixin description-style {
+    color: $secondary-dark-color;
+    font-size: 0.8rem;
+    font-weight: 500;
+    margin-bottom: $space-between-section-elements;
+}
+
+@mixin normal-text {
+    color: $primary-dark-color;
+    font-size: 0.9rem;
+}
+
 
 /* COMMON & UTILITIES */
 html {
@@ -50,6 +68,18 @@ html {
     box-sizing: border-box; 
     margin: 0; 
     padding: 0;
+}
+
+h2.section-title {
+    font-size: 2rem;
+    font-weight: 800;
+    margin-bottom: $space-between-section-elements;
+}
+
+h3.subsection-title {
+    font-size: 1rem;
+    font-weight: 600;
+    margin-bottom: $space-between-section-elements;
 }
 
 .btn {
@@ -72,7 +102,6 @@ html {
 
 .btn.inTouch::after {
     content: "GET IN TOUCH";
-    
 }
 
 .uppercase {
@@ -81,6 +110,12 @@ html {
 
 .capitalize {
     text-transform: capitalize;
+}
+
+.highlighted-text {
+    padding: 5px 10px;
+    background-color: $secondary-light-color;
+    color: $secondary-dark-color;
 }
 
 
@@ -184,10 +219,7 @@ header {
             margin-top: 90px;
 
             .description {
-                color: $secondary-dark-color;
-                font-size: 0.8rem;
-                font-weight: 500;
-                margin-bottom: 10px;;
+                @include description-style;
             }
 
             .title {
@@ -198,8 +230,7 @@ header {
             }
 
             .mission {
-                color: $primary-dark-color;
-                font-size: 0.9rem;
+                @include normal-text;
                 padding: 15px 0 30px;
             }
 
@@ -211,6 +242,119 @@ header {
     }
     // _/header-content
 
+}
+
+// _main
+main {
+    .first-section-container {
+        @include content-shrink;
+    }
+
+    // _first-section
+    .first-section {
+        padding: 90px 0;
+        display: flex;
+
+        // _left box
+        .who.left-box {
+            width: 60%;
+
+            // h2.section-title::before {
+            //     content: url('../img/gem-regular.svg');
+            //     width: 10px !important;
+            // }
+
+            .description {
+                @include description-style;
+            }
+
+            .text-container {
+                
+                p, .quote {
+                    @include normal-text;
+                    margin-bottom: $space-between-section-elements;
+                }
+                
+                .quote {
+                    padding: 10px 35px 10px 25px;
+                    border-left: 3px solid $secondary-light-color;
+                    font-style: italic;
+                }
+
+                ul {
+                    @include normal-text;
+                    padding-left: 19px;
+
+                    li {
+                        padding: 2px 0;
+                    }
 
 
+                }
+            }
+
+        }
+
+        // _right-box
+        .right-box {
+            margin-left: 50px;
+
+            //_vehicles 
+            .vehicles {
+                
+                ul {
+                    list-style: none;
+
+                    li {
+                        border-bottom: 1px solid $primary-dark-color;
+                        display: flex;
+                        padding: 15px 0 15px;
+
+                        img {
+                            background-color: $secondary-light-color;
+                            width: 70px;
+                            height: 35px;
+                        }
+
+                        .container {
+                            margin-left: 15px;
+
+                            h4 {
+                                font-size: 1rem;
+                                font-weight: 600;
+                            }
+
+                            .charateristics {
+                                font-size: 0.8rem;
+                                color: $primary-dark-color;
+                            }
+                        }
+                    }
+
+                    li:last-child {
+                        border-bottom: none;
+                    }
+                }
+            }
+
+            // _certifications
+            .certifications {
+                margin-top: 50px;
+
+                .certifications-container {
+                    display: flex;
+
+                    .img-container {
+                        width: 100px;
+                        height: 100px;
+                        outline: 1px dotted lightblue;
+                        margin-right: 15px;
+                        box-shadow: 2px 2px 10px lightgrey;
+                    }
+                    
+                }
+            }
+        }
+
+    }
 }
