--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,5 @@
 /* TO DO 
+_adding a bigger space-between among vars?
 _credits for gem font-awesome image
 _space between certifications title and images
 _change tag section in .section here in css and add section to html classes
@@ -6,7 +7,7 @@ _refactoring
 */
 
 /* $var
-var: $primary-light-color: white, $primary-dark-color:grey, $secondary-light-color§:lightwatergreen, $secondary-dark-color:weatergreen
+var: $primary-light-color: white, $primary-dark-color:grey, $secondary-light-color§:lightwatergreen, $secondary-mid-color:weatergreen
 var: $background-light-color, $background-dark-primary-color, $background-dark-secondary-color 
 var: $page-elements
 */
@@ -22,8 +23,9 @@ content{max-w:, mg: auto} // one each section
 $primary-light-color: white; 
 $primary-dark-color: #C0C3D1; // #69696D; 
 $secondary-light-color: #DAECED; // #719a9c; 
-$secondary-dark-color: #028484;
-$complementary-secondary-dark-color: #FFFFFF;
+$secondary-mid-color: #028484;
+$complementary-secondary-mid-color: #FFFFFF;
+$secondary-dark-color: rgba(2, 132, 132, 0.3);
 
 // layout
 $background-light-color: white; 
@@ -49,7 +51,7 @@ $horizontal-nav-li-distance: 30px;
 }
 
 // @mixin description-style {
-//     color: $secondary-dark-color;
+//     color: $secondary-mid-color;
 //     font-size: 0.8rem;
 //     font-weight: 500;
 //     margin-bottom: $space-between-section-elements;
@@ -78,7 +80,7 @@ section {
 }
 
 .description-sentence {
-    color: $secondary-dark-color;
+    color: $secondary-mid-color;
     font-size: 0.8rem;
     font-weight: 500;
     margin-bottom: $space-between-section-elements;
@@ -105,13 +107,13 @@ h3.subsection-title {
 
 .btn.full {
     color: $primary-light-color;
-    background-color: $secondary-dark-color;
-    border: 1px solid $secondary-dark-color;
+    background-color: $secondary-mid-color;
+    border: 1px solid $secondary-mid-color;
 }
 
 .btn.empty {
     color: $primary-light-color;
-    border: 1px solid $secondary-dark-color;
+    border: 1px solid $secondary-mid-color;
     background-color: transparent;
 }
 
@@ -130,7 +132,12 @@ h3.subsection-title {
 .highlighted-text {
     padding: 5px 10px;
     background-color: $secondary-light-color;
-    color: $secondary-dark-color;
+    color: $secondary-mid-color;
+}
+
+.highlighted-onlyBackground-text {
+    padding: 5px 10px;
+    background-color: $secondary-dark-color;
 }
 
 
@@ -202,7 +209,7 @@ header {
                     content: "";
                     display: block;
                     position: absolute;
-                    background-color: $secondary-dark-color;
+                    background-color: $secondary-mid-color;
                     opacity: 0.5;
                     width: 4.2em;
                     height: 2.1em;
@@ -398,7 +405,7 @@ main {
 
                 span {
                     color: $primary-light-color;
-                    background-color: rgba(2, 132, 132, 0.3);
+                    background-color: $secondary-dark-color;
                 }
             }
 
@@ -440,12 +447,12 @@ main {
 
                             i:first-child {
                                 font-size: 20px;
-                                color: $secondary-dark-color;
+                                color: $secondary-mid-color;
                             }
                         }
 
                         .arrow {
-                            color: $secondary-dark-color;
+                            color: $secondary-mid-color;
                         }
                     }
 
@@ -465,6 +472,7 @@ main {
 
     }
 
+    // third-section
     .third-section-container {
         background-color: #EFF4EE;
         position: relative;
@@ -513,7 +521,7 @@ main {
                         text-align: center;
                         font-size: 1rem;
                         font-weight: 600;
-                        color: $secondary-dark-color;
+                        color: $secondary-mid-color;
                     }
                     
                     .subsection-title {
@@ -531,6 +539,47 @@ main {
                 }
 
             }
+        }
+    }
+
+    // fourth section
+    .fourth-section-container {
+        background: url("../img/bg-10.jpg") no-repeat center;
+        background-size: cover;
+
+        .fourth-section  {
+            text-align: center;
+            @include content-shrink;
+
+            .section-title {
+                color: $primary-light-color;
+            }
+
+            .results-container {
+                padding-top: 50px;
+                
+                ul {
+                    @include horizontal-ul;
+                    justify-content: space-between;
+
+                    li {
+                        text-align: center;
+
+                        .number {
+                            color: $secondary-mid-color;
+                            margin-bottom: $space-between-section-elements;
+                            font-size: 2rem;
+                            font-weight: 600;
+                        }
+
+                        .subsection-title {
+                            color: $primary-light-color;
+                        }
+                    }
+                }
+            }
+
+
         }
     }
 }
