--- a/src/app.scss
+++ b/src/app.scss
@@ -179,6 +179,17 @@ header {
         height: 570px;
         background: url("../img/bg-9.jpg") no-repeat center;
         background-size: cover;
+        position: relative;
+
+        .header-overlay {
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6);
+            // top: 0;
+            // left: 0;
+            // position: absolute;
+            // z-index: 0;
+        }
 
         .header-nav-container {
             @include content-shrink;
