cambiato colore su richiesta cliente (secondary-mid-color)

--- a/src/app.scss
+++ b/src/app.scss
@@ -23,7 +23,7 @@ content{max-w:, mg: auto} // one each section
 $primary-light-color: white; 
 $primary-dark-color: #C0C3D1; // #69696D; 
 $secondary-light-color: #DAECED; // #719a9c; 
-$secondary-mid-color: #028484;
+$secondary-mid-color: #41c457; // #028484;
 $complementary-secondary-mid-color: #FFFFFF;
 $secondary-dark-color: rgba(2, 132, 132, 0.3);
 
