--- a/src/app.scss
+++ b/src/app.scss
@@ -173,6 +173,10 @@ h3.subsection-title {
 
 
 /* STYLE */
+.wrapper {
+    min-width: 1400px;
+}
+
 // _header
 header {
     
@@ -876,18 +880,19 @@ footer {
     
             .goTop {
                 position: absolute;
-                right: $space-between-section-elements;
+                right: 20px;
                 width: 36px;
                 height: 36px;
                 line-height: 36px;
                 text-align: center;
                 border-radius: 50%;
-                background-color: $background-dark-secondary-color;
+                background-color: #29292D;
                 top: 50%;
                 transform: translateY(-50%);
 
                 i {
                     font-size: 1rem;
+                    color: #0B1B1F;
                 }
             }
         }
